--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Encoding: UTF-8
 Imports: ComplexHeatmap, reshape2, stats
 LazyData: true
 RoxygenNote: 7.2.3
+URL: https://github.com/lkroeh/CCCheatmap
+BugReports: https://github.com/lkroeh/CCCheatmap/issues
