--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ LazyData: true
 RoxygenNote: 7.2.3
 URL: https://github.com/lkroeh/CCCheatmap
 BugReports: https://github.com/lkroeh/CCCheatmap/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
