--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(makehm)
 export(makerelativehm)
 import(ComplexHeatmap)
 import(circlize)
+import(grid)
 import(reshape)
 import(reshape2)
 import(stats)
